# homesense

./: .gitignore  README.md
esp-mocker/src/: main.rs
esp8266/: esp8266.ino  esp8266_mqtt.ino
esp8266/esp8266_mqtt/: esp8266_mqtt.ino
esp8266/micropython/: boot.py  credentials.py  esp_homesense.py  json_test.py  main.py  main_mqtt.py  pin_reference.md  wifi.py
esp_mocker/: Cargo.toml
esp_mocker/src/: main.rs
homesense/: Cargo.toml
homesense/migrations/20170107014657_create_tables/: down.sql  up.sql
homesense/src/: lib.rs
server/: Cargo.toml
server/migrations/20161229230321_create_temperatures/: up.sql
server/migrations/20170107014657_create_tables/: up.sql
server/src/: main.rs  models.rs
