[package]
name = "homesense-server"
version = "0.1.0"
authors = ["Shaun Karran <shaun.karran@gmail.com>"]

[dependencies]
dotenv = "0.8.0"
rustc-serialize = "0.3"

[dependencies.chrono]
version = "0.2.0"
features = ["rustc-serialize"]

[dependencies.diesel]
version = "0.9.0"
features = [ "chrono"]

[dependencies.diesel_codegen]
 version = "0.9.0"
 features = ["postgres"]
